Fix for modals z-index

--- a/app/styles/constants/z-index.scss
+++ b/app/styles/constants/z-index.scss
@@ -3,5 +3,5 @@ $z-index-header: 4000;
 $z-index-conversation-host: 1001;
 $z-index-page-sticky: 1000;
 
-$z-index-modal-backdrop: 1020;
-$z-index-modal: 1021;
+$z-index-modal-backdrop: 4020;
+$z-index-modal: 4021;
